# CSS434_DistributedSystems

./: .gitignore  COPYING  README  meson.build
Lab1a/: EchoServer.java
Lab1b/: TcpClientDouble.java  TcpServerDouble.java
Lab2b/: MyProgram.java
Lab3/: Lab3.cpp
Lab4/: main.cu
P1/: Causal.java  Chat.java  Chat2.java  Client.java  Message.java  Server.cpp  Server.java
P2/: Heat2D.java  Heat2D_mpi.java  diffuse.cpp
P3/: make_data.sh  part1.cpp  part2.cu  real_output.csv
P4/: arg.h  poc.c  program4.cu
