project('CSS434', 'java', 'cpp')

jar('P1_Server', 'P1/Server.java', 'P1/Message.java',
	main_class: 'P1.Server',
	include_directories: include_directories('.'))

jar('P1_Client', 'P1/Client.java', 'P1/Message.java',
	main_class: 'P1.Client',
	include_directories: include_directories('.'))

executable('P1_Server_c', 'P1/Server.cpp')
