project('CSS434', 'java')

jar('Lab1a_EchoServer', 'Lab1a/EchoServer.java',
	main_class: 'Lab1a.EchoServer',
	include_directories: include_directories('.'))

jar('Lab1b_TcpClientDouble', 'Lab1b/TcpClientDouble.java',
	main_class: 'Lab1a.TcpClientDouble',
	include_directories: include_directories('.'))

jar('Lab1b_TcpServerDouble', 'Lab1b/TcpServerDouble.java',
	main_class: 'Lab1a.TcpServerDouble',
	include_directories: include_directories('.'))

jar('P1_Server', 'P1/Server.java',
	main_class: 'P1.Server',
	include_directories: include_directories('.'))

jar('P1_Client', 'P1/Client.java',
	main_class: 'P1.Client',
	include_directories: include_directories('.'))

jar('P1_Causal', 'P1/Chat2.java',
	main_class: 'P1.Chat2',
	include_directories: include_directories('.'))
